pyinfra-debug.log
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/cli.py", line 243, in cli
    _main(*args, **kwargs)
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/cli.py", line 378, in _main
    can_diff, state, config = _handle_commands(
                              ^^^^^^^^^^^^^^^^^
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/cli.py", line 705, in _handle_commands
    state, config, operations = _prepare_deploy_operations(state, config, operations)
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/cli.py", line 766, in _prepare_deploy_operations
    load_deploy_file(state, filename)
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/util.py", line 235, in load_deploy_file
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/util.py", line 229, in _parallel_load_hosts
    raise result
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/util.py", line 209, in load_file
    callback()
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/util.py", line 235, in <lambda>
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
                                        ^^^^^^^^^^^^^^^^^^^
  File "/home/doug/.local/share/uv/tools/pyinfra/lib/python3.12/site-packages/pyinfra_cli/util.py", line 57, in exec_file
    code = compile(code_str, filename, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "deploy/deploy_speaking.py", line 6
    packages = ["pulseaudio", "portaudio19-dev"]
               
SyntaxError: invalid syntax. Perhaps you forgot a comma?
